<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:background="@color/backgroundfragment"
        android:gravity="center_horizontal">


        <TextView
            android:id="@+id/name_elenco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:text="@string/elenco_name"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/sur_elenco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/elenco_surname"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/play_btn"
            android:layout_width="66dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_play"
            android:contentDescription="@string/play" />


    </LinearLayout>

    <ImageView
        android:id="@+id/img_elenco"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/zoob"
        android:padding="0dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/img_elenco" />

</RelativeLayout>